[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/hand_management_demo.gd" id="1"]

[node name="HandManagementDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -400.0
offset_right = 450.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HAND MANAGEMENT SYSTEM DEMO"
horizontal_alignment = 1

[node name="SystemLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tests: Draw, add, discard, query operations"
horizontal_alignment = 1

[node name="TestButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InitPlayerButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Initialize Player & Deck"

[node name="DrawToHandButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Draw 1 Card to Hand"

[node name="AddCardButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Add Manual Card to Hand"

[node name="DiscardCardButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Discard First Card"

[node name="GetEquipmentButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Show Equipment Cards"

[node name="ClearHandButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Clear Hand"

[node name="HandLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Hand:
(Will update after actions)"

[node name="DeckStatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Deck Status:
(Will update after actions)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
